# zmk-config

./: build.yaml
config/: Kconfig  corne.keymap  splitkb_aurora_corne.conf  splitkb_aurora_corne.keymap
config/boards/: Kconfig.defconfig  nice_nano_v2.dts  nice_nano_v2.dtsi  nice_nano_v2.overlay
config/boards/arm/bingo/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  bingo.dts  bingo.keymap  bingo.zmk.yml  bingo_left.dts  bingo_left_defconfig  bingo_right.dts  bingo_right.keymap  bingo_right_defconfig  corne.dtsi  nice_nano.dtsi  status_screen.c
config/boards/arm/bingo/widgets/: bongo_cat_widget.c
config/boards/arm/nice_nano/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  bongo_cat_images.c  hello_widget.c  nice_nano_v2.yaml  nice_nano_v2.zmk.yml  nice_nano_v2_defconfig  status_screen.c
config/boards/arm/nice_nano_v2/: Kconfig  Kconfig.defconfig  nice_nano_v2.dts  nice_nano_v2.yaml  nice_nano_v2.zmk.yml  status_screen.c
config/boards/nice_nano_v2/: CMakeLists.txt  Kconfig
config/boards/shields/splitkb_aurora_corne/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.shield  bongo_cat_widget.c  custom_status_screen.c  hello_widget.c  splitkb_aurora_corne.zmk.yml  status_screen.c
